fix (grid): fix headers stretching when content shrinks

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -59,31 +59,31 @@ p {
 /* layout */
 
 body {
-    margin: 25px;
+    margin: 0;
 }
 
 .wrapper {
     display: grid;
-    /* grid-template-columns: 0.5fr repeat(9, minmax(auto, 1fr)); */
-    grid-template-columns: min-content;
-    grid-auto-rows: minmax(100px, auto);
+    min-height: 100vh;
+    grid-template-columns: auto minmax(0,1fr);
+    grid-auto-rows: min-content min-content auto;
     grid-template-areas: 
         "sn mn mn mn mn mn mn mn mn mn mn"
         "sn hd hd hd hd hd hd hd hd hd hd"
         "sn mc mc mc mc mc mc mc mc mc mc"
-        "ft ft ft ft ft ft ft ft ft ft ft"
 }
 
 /* side nav bar*/
-/* TODO:  other elements in grid to fill in space*/
+
 .sidenav {
     grid-area: sn;
     display: flex;
+    min-width: 5rem;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
     background-color: #042235;
-    padding: 1rem 0;
+    padding: 1rem 0 2rem;
     max-width: fit-content;
 }
 
@@ -95,6 +95,11 @@ body {
     box-sizing: border-box;
     text-align: center;
     margin: 0;
+}
+
+.sidenav-icon {
+    height: 3rem;
+    width: 3rem;
 }
 
 .sidenav-item:last-child {
@@ -153,10 +158,10 @@ body {
 
 .notification-badge {
     position: absolute;
-    top: -12px;
-    right: -12px;
-    width: 18px;
-    height: 18px;
+    top: -10px;
+    right: -10px;
+    width: 22px;
+    height: 22px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -165,7 +170,6 @@ body {
     background-color: #2995DA;
     color: #fff;
     font-size: 0.75rem;
-    line-height: 0.75rem;
     padding: 0.1rem;
 }
 
@@ -198,6 +202,14 @@ body {
     background-color: #fff;
 }
 
+.third-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+}
+
+
 .create-team-btn {
     margin-left: auto;
     display: flex;
@@ -226,16 +238,13 @@ h2.tab-label {
     gap: 1rem;
 }
 
-
 .main-content {
-    display: flex;
     background-color: #fff;
-    flex-direction: column;
-    /* min-width: 100; */
-    /* width: 75%; */
-    flex: 2 1 auto;
+    width: 75%;
     padding: 1rem 2rem;
-    /* max-height: 75%; */
+    min-height: 100%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05),
+                 0px 0px 30px rgba(0, 0, 0, 0.1);
 }
 
 .main-content > div {
@@ -304,12 +313,13 @@ h2.tab-label {
 .activity-container {
     background-color: #fff;
     display: flex;
-    flex: 1 1 auto;
     flex-direction: column;
     min-height: fit-content;
     max-height: 40%;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     padding: 1rem;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05),
+                 0px 0px 30px rgba(0, 0, 0, 0.1);
 }
 
 .activity-header {
